Bug 836824 - Make libsoundtouch build on FreeBSD and Mac without command-line tools. r=khuey